<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <Button
            android:layout_gravity="center_horizontal"
            android:layout_width="275dp"
            android:layout_height="150dp"
            android:text="@string/implisit"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:id="@+id/btnImplisit"/>
    <Button
            android:layout_gravity="center_horizontal"
            android:layout_width="275dp"
            android:layout_height="150dp"
            android:text="@string/explicit"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:id="@+id/btnExplisit"/>
    <Button
            android:layout_gravity="center_horizontal"
            android:layout_width="275dp"
            android:layout_height="150dp"
            android:text="@string/intent_bundle"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:id="@+id/btnIntentbundle"/>

</LinearLayout>