<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        tools:context=".Intentbundle">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:layout_margin="50dp">
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_foreground"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:id="@+id/Nama"
            android:text="@string/deni_achmad"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:id="@+id/NPM"
            android:text="@string/_16670090"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:id="@+id/universitas"
            android:text="@string/universitas_pgri_semarang"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
</LinearLayout>
</LinearLayout>